Updated all files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Mobber</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Didact+Gothic' rel='stylesheet' type='text/css'>
 </head>
 <body>
 	
@@ -13,14 +13,14 @@
 	<div class="container">
 		<img class="logo" src="images/logo.png">
 		<ul class="nav">
-			<li>FIND A MOB</li>
-			<li>START A MOB</li>
+			<li>Find a Mob</li>
+			<li>Start a Mob</li>
 		</ul>
-		<div class="avatar"></div>
-		<ul class="profile">
-			<li>Edwin Espaderos</li>
-			<li class="caret"></li>
-		</ul>
+		<div class="profile-info">	
+			<div class="avatar"></div>
+			<span class="profile">Edwin Espaderos</span>
+			<div class="caret"></div>
+		</div>
 	</div>
 </div>
 
@@ -29,25 +29,23 @@
 <div class="subheader">
 	<div class="container">
 		<h1>
-			Spread the World and be Rewarded for Spreading the world for others.</h1>
+			Spread the world and be rewarded for spreading the world for others.
+		</h1>
 	</div>
 </div>
 
 <!-- This the Banner -->
 
-<div class="banner">
+<div class="middle">
 	<div class="container">
-		<img class="main" src="images/main.png">
-		<div class="square">
-			<h1>78</h1>
-			<p>MOBERS</p>
-		</div>
-		<div class="squared">
-			<h1>250</h1>
-			<p>MOBERS NEEDED</p>
+		<img class="content" src="images/music.png">
+		<div class="imgbar">
+			<h2>Beatles World Tour</h2>
+			<img src="images/clock.svg">
 		</div>
 	</div>
 </div>
+
 
 </body>
 </html>
