updated social media icons in body

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 		
-				<!-- This is where the Righ Col Starts -->
+				<!-- R-Col for body Starts here -->
 
 		<div class="r-col">
 			<div class="box">
@@ -103,7 +103,14 @@
 			</div>
 			<div class="sub-info">
 				<p>This Mob will only be released if it is joined by the <br> needed amount of mobbers. Spread the word!</p>
-			</div>	
+			</div>
+			<div class="social-1">
+					<img src="images/twitter1.png">
+					<img src="images/facebook1.png">
+					<img src="images/google1.png">
+					<img src="images/link.png">
+					<span>http://kck.st/Av7rle</span>
+				</div>	
 		</div>
 	</div>
 </div>
@@ -133,7 +140,7 @@
 			</div>
 		</div>
 		
-		<!-- This is where second body col right starts ! -->
+		<!-- R - Col for second body starts ! -->
 
 		<div class="r-col">
 			<div class="image3-block">
@@ -149,7 +156,7 @@
 	</div>
 </div>
 
-<!-- This is where the third body starts  -->
+<!-- Third body starts  -->
 
 <div class="third-body">
 	<div class="container">
@@ -180,7 +187,7 @@
 			</table>
 		</div>
 		 
-			<!--  Rigt col starts here -->
+			<!--  Rigt col for third body starts here -->
 		
 		<div class="col-r">
 			<div class="box-behind">
@@ -248,7 +255,7 @@
 			</div>
 		</div>
 
-		<!-- Right Col Starts Here!! -->
+		<!-- Right Col for footer Starts Here!! -->
 
 		<div class="r-col">
 			<div class="btn-how">How It Works</div>
@@ -261,7 +268,7 @@
 		</div>
 	</div>
 </div>
-
+<!-- ¡ FIN !  -->
 </body>
 </html>
 
